Fix dark mode and preview issues

--- a/src/styles/_note-sidebar.scss
+++ b/src/styles/_note-sidebar.scss
@@ -35,9 +35,10 @@
       .note-title {
         display: flex;
         align-items: center;
+        width: 100%;
 
         .icon {
-          flex: 0 0 26px;
+          flex: 0 0 20px;
         }
 
         .note-favorite {
