--- a/src/styles/_previewer.scss
+++ b/src/styles/_previewer.scss
@@ -5,7 +5,7 @@
   overflow-y: auto;
 
   background: #f5f5f5;
-  color: #202020;
+  color: #404040;
   padding: 1rem;
 
   a {
@@ -105,8 +105,15 @@
     margin: 0 0 1.5rem 0;
 
     code {
+      background: transparent;
       line-height: 1.2;
     }
+  }
+
+  code {
+    padding: 2px 4px;
+    border-radius: 4px;
+    background: rgba(0, 0, 0, 0.08);
   }
 
   hr {
